--- a/server/static/css/site.css
+++ b/server/static/css/site.css
@@ -34,7 +34,6 @@ a:hover {
     border-bottom: 1px solid black;
 }
 #resultstable {
-    font-size: 12px;
 }
 .listhighlight:hover {
     background-color: #eee;
@@ -59,7 +58,7 @@ header, main, footer {
 
 #mynetwork {
   width: 100%;
-  height: 500px;
+  height: 100%;
   border: 1px solid lightgray;
 }
 
