--- a/server/static/css/site.css
+++ b/server/static/css/site.css
@@ -41,6 +41,9 @@ a:hover {
 .listhighlight {
     color: black;
 }
+header, main, footer {
+  padding-left: 200px;
+}
 
 @media only screen and (max-width : 992px) {
   header, main, footer {
